# lattice

./: .env.example  .gitignore  LATTICE-CLI-QUICKSTART.md  bunfig.toml  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
cli/: lattice.js
docs/: CODE_SIGNING.md  OTA_UPDATES.md  byoc-plan.md  current-state.md  impl-v2.md  impl-v3.md  impl.md  onboarding-journey.md  paper-export-plan.md  publishing-plan.md
docs/todos/: gap-summary.md
public/: graph-preview.html
raycast-extension/: package.json
scripts/: build-appimage.sh  build-aur.sh  com.vijaygatla.Lattice.yml  fix-quartz-yaml.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  file-clip-1  file-rahul-1on1  mk-ai-note-3  mk-ai-note-4  mk-ai-note-5  mk-ai-note-6  mk-design-note-11  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: byom.rs  byom.rs.backup  canvas.rs  commands.rs  e2ee.rs  fs_service.rs  git.rs  github_byoc.rs  importers.rs  lib.rs  main.rs  ota_updater.rs  paper_byof.rs  publish_ui.rs  updater.rs  vault_commands.rs  vcs_auto_commit.rs  vcs_commit_ai.rs
src-tauri/src/calendar/: apple_client.rs  calcom.rs  calcom_client.rs  google_client.rs  graph_client.rs  mod.rs  outlook.rs  providers.rs  tokenstore.rs
src-tauri/src/importer/: helpers.rs  logseq.rs  mod.rs  notion.rs  obsidian.rs
src-tauri/src/journal/: mod.rs
src-tauri/src/mcp/: instructions.rs  mod.rs  tools.rs
src-tauri/src/paper/: bundle.rs  compile.rs  engine.rs  engine_install.rs  md_to_tex.rs  md_to_typ.rs  mod.rs  templates.rs  toml.rs  typst_compile.rs
src-tauri/src/publish/: exclude.rs  github_pages.rs  mod.rs  node_probe.rs  preview.rs  proc.rs  quartz.rs  quartz_config_template.yaml  toml.rs
src-tauri/src/sync/: clients.rs  error.rs  gdrive.rs  github.rs  keychain.rs  manifest.rs  mod.rs  oauth.rs  onedrive.rs
src/components/: ActivityStrip.tsx  EditorArea.css  EditorArea.tsx  EmptyTab.css  FileTree.css  FileTree.tsx  Icons.tsx  LeftSidebar.tsx  ManageVaultsModal.css  ManageVaultsModal.tsx  RightSidebar.css  RightSidebar.tsx  SettingsModal.css  SettingsModal.tsx  Splitter.css  Splitter.tsx  StatusPill.css  StatusPill.tsx  TopBar.tsx  VaultPickerMenu.tsx
src/components/calendar/: CalendarPanel.css  CalendarPanel.tsx  EventDialog.css  EventDialog.tsx
src/components/canvas/: CanvasView.css  CanvasView.tsx
src/components/common/: CommandPalette.css  CommandPalette.tsx  HelpShortcutsPanel.css  HelpShortcutsPanel.tsx  HintOverlay.css  HintOverlay.tsx  HoverPreview.css  HoverPreview.tsx  Icons.tsx  KeyboardShortcutsOverlay.css  KeyboardShortcutsOverlay.tsx  Keycap.css  Keycap.tsx  SkeuomorphicButton.css  SkeuomorphicButton.tsx  UpdateNotification.css  UpdateNotification.tsx  VimKeybindingsRef.css  VimKeybindingsRef.tsx  WhichKeyOverlay.css  WhichKeyOverlay.tsx  dragGhost.ts
src/components/editor/: CodeMirrorEditor.tsx  EditorArea.css  EditorArea.tsx  EmptyTab.tsx  GraphCanvas.tsx  GraphView.css  GraphView.tsx  KanbanView.css  KanbanView.tsx  Markdown.tsx  MarkdownPreview.tsx  PdfView.css  PdfView.tsx  SlidesView.css  SlidesView.tsx  SplitEditor.css  SplitEditor.tsx  cm-outliner.ts
src/components/editor/extensions/: cm-callouts.ts  cm-diagrams.ts  cm-embeds.ts  cm-frontmatter.ts  cm-heading-fold.ts  cm-live-preview.ts  cm-section-links.ts  cm-slash-commands.ts  cm-template-variables.ts  cm-vim.ts  index.ts
src/components/filetree/: FileTree.css  FileTree.tsx
src/components/layout/: ActivityStrip.tsx  CanvasListPanel.tsx  ChangesPanel.css  ChangesPanel.tsx  GitGraph.css  GitGraph.tsx  KanbanPanel.tsx  LeftSidebar.css  LeftSidebar.tsx  RightSidebar.css  RightSidebar.tsx  Splitter.tsx  StatusPill.css  StatusPill.tsx  TopBar.tsx  TrashPanel.css  TrashPanel.tsx
src/components/modals/: ExportPdfModal.css  ExportPdfModal.tsx  KanbanConfigModal.css  KanbanConfigModal.tsx  ManageVaultsModal.css  ManageVaultsModal.tsx  NewPaperModal.css  NewPaperModal.tsx  PublishWizard.css  PublishWizard.tsx  SettingsModal.css  SettingsModal.tsx  TaskDetailModal.css  TaskDetailModal.tsx  VaultPickerMenu.css  VaultPickerMenu.tsx
src/components/onboarding/: OnboardingShell.css  OnboardingShell.tsx  OnboardingWizard.css  OnboardingWizard.tsx
src/components/onboarding/state/: onboardingStore.ts  personaPresets.ts
src/components/onboarding/steps/: Step0Splash.tsx  Step1Welcome.tsx  Step2Persona.tsx  Step3Vault.tsx  StubSteps.tsx
src/components/paper/: PaperToolbar.css  PaperToolbar.tsx
src/hooks/: useDragResize.ts
src/lib/: backlinks.ts  byoc.ts  byomApi.ts  calendarApi.ts  canvasMultiSelect.ts  canvasRouting.ts  gitGraph.ts  indexer.ts  journalApi.ts  markdown.ts  ota-updater.ts  paper.ts  protocol.ts  publish.ts  taskMetadata.ts  tauriApi.ts  vcs.ts  window-manager.ts
src/lib/collab/: index.ts  loro-bridge.ts  loro-provider.ts  types.ts
src/state/: byocStore.ts  calendarStore.ts  canvas.ts  editorStore.ts  journalStore.ts  mockVault.ts  paperStore.ts  publishStore.ts  settingsStore.ts  splitTree.ts  types.ts  vaultStore.ts  vcsStore.ts
