[package]
name = "lattice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lattice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
lazy_static = "1.5.0"

# VCS — system `git` via subprocess.  No in-process git library:
#   - Real git binary => 100% semantic fidelity (hooks, LFS, signing,
#     credential helpers, SSH, merge, rebase, stash, .gitignore, ...).
#   - Push/fetch over HTTPS+SSH works on day one via the user's
#     existing git credential setup (Windows Cred Mgr, Keychain, gh).
#   - Zero in-tree git impl to maintain across upstream churn.
#   - On-disk layout is plain git: any terminal / VS Code / GitHub
#     Desktop can drive the same vault repo.
# Git presence is detected at runtime (`git_check_installed`); the
# onboarding wizard auto-installs via winget (Win) / xcode-select (mac)
# / package-manager hint (Linux) only when the user opts into sync.
# Deps removed when we ripped gix: gix, gix-* siblings, gitoxide-core.

# Recycle-bin aware deletes (delete_file, delete_folder, discard
# untracked).  Cross-platform: IFileOperation on Windows, NSWorkspace
# on macOS, freedesktop trash spec on Linux.
trash = "5"

# `walkdir` stays for non-git vault scans (graph builder, backlinks)
# and for our cheap pre-init file-count preview.
walkdir = "2.5"

# ----------------------------------------------------------------------------
# Build profiles — tuned for fast dev iteration on Windows.
#
#  - Our own app crate (`lattice` / `lattice_lib`) stays at opt-level=0 so
#    incremental rebuilds after a `src-tauri/src/*.rs` change are very fast.
#  - Every other crate (i.e. dependencies) is built with opt-level=1 so they
#    only get compiled once and the resulting binary still runs reasonably
#    fast in dev (the big wins are in serde/syn-driven crates and tauri).
#  - `debug = "line-tables-only"` keeps panic backtraces but cuts the
#    debug-info section the linker has to swallow on every relink — this is
#    the single biggest dev-build speedup on Windows.
#  - Release profile uses thin-LTO + a single codegen unit for smaller and
#    faster shipped binaries.
# ----------------------------------------------------------------------------

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
panic = "abort"

