[package]
name = "lattice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lattice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
lazy_static = "1.5.0"

# VCS — system `git` via subprocess.  No in-process git library:
#   - Real git binary => 100% semantic fidelity (hooks, LFS, signing,
#     credential helpers, SSH, merge, rebase, stash, .gitignore, ...).
#   - Push/fetch over HTTPS+SSH works on day one via the user's
#     existing git credential setup (Windows Cred Mgr, Keychain, gh).
#   - Zero in-tree git impl to maintain across upstream churn.
#   - On-disk layout is plain git: any terminal / VS Code / GitHub
#     Desktop can drive the same vault repo.
# Git presence is detected at runtime (`git_check_installed`); the
# onboarding wizard auto-installs via winget (Win) / xcode-select (mac)
# / package-manager hint (Linux) only when the user opts into sync.
# Deps removed when we ripped gix: gix, gix-* siblings, gitoxide-core.

# Recycle-bin aware deletes (delete_file, delete_folder, discard
# untracked).  Cross-platform: IFileOperation on Windows, NSWorkspace
# on macOS, freedesktop trash spec on Linux.
trash = "5"

# `walkdir` stays for non-git vault scans (graph builder, backlinks)
# and for our cheap pre-init file-count preview.
walkdir = "2.5"

# Subprocess timeout — lets us kill a misbehaving `git` child process
# after a deadline instead of blocking the Tauri IPC thread forever.
# Tiny crate, no transitive deps.
wait-timeout = "0.2"

# ----------------------------------------------------------------------------
# BYOC sync layer (sync/* module) — slice B, GitHub + Google Drive iteration.
#
# Hard product rule: Lattice has no server.  All auth flows are public-client
# (PKCE or Device Code), tokens live in the OS keychain only, vault data
# flows direct from this machine to the provider's API.  See docs/byoc-plan.md.
# ----------------------------------------------------------------------------

# Token storage backends.
#
# Windows  → Win32 DPAPI (CryptProtectData) + file in %LOCALAPPDATA%\Lattice
#           \byoc-tokens.  See `sync/keychain.rs`.  The user explicitly does
#           NOT want tokens showing up in Credential Manager — we own our
#           storage so the app is self-contained (uninstall removes tokens).
# macOS    → keyring crate (Keychain Services).
# Linux    → keyring crate (libsecret / secret-service).
#
# `keyring` therefore stays in the dep graph but is only compiled on the
# non-Windows targets via cfg-gating inside `sync/keychain.rs`.  Disabling
# the Windows-native backend prevents the build pulling in the COM glue
# we'll never invoke.
keyring = { version = "3", default-features = false, features = ["apple-native", "sync-secret-service"] }

# HTTP client for the cloud APIs.
#
# TLS backend: `native-tls` (Schannel on Windows, Secure Transport on
# macOS, OpenSSL on Linux).  We deliberately AVOID `rustls-tls` because
# it pulls in `ring`, whose build script needs a C compiler.  On
# aarch64-pc-windows-msvc (Snapdragon X / arm64 dev boxes) clang and
# MSVC are not part of the default toolchain, and Schannel works
# perfectly fine for talking to github.com / googleapis.com.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream", "multipart", "blocking"] }

# tokio is pulled in transitively by Tauri 2 but we add an explicit entry so
# the loopback redirect server in sync/oauth.rs can spawn a TcpListener.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

# Object-safe async traits for `dyn SyncProvider`.
async-trait = "0.1"

# PKCE: SHA-256 the code_verifier into the S256 challenge.
sha2 = "0.10"

# base64url (no-padding) for PKCE challenge + state nonce.
base64 = "0.22"

# CSPRNG for PKCE verifier + state nonce.
rand = "0.8"

# URL-encoded form bodies (token exchange, Drive query strings).
urlencoding = "2"

# Content-addressed object dedup for the Drive blob-store overlay.
blake3 = "1"

# ----------------------------------------------------------------------------
# Slice C (paper export) + Slice D (publishing) — both modules round-trip
# config through a single per-feature TOML file (`paper.toml`, `publish.toml`).
# `toml = "0.9"` is the only new dep needed to land the module skeletons +
# the first-real-feature slices (paper_create scaffold + publish_probe node
# detection).  Heavier deps (typst, comrak, tauri-plugin-shell, tiny_http,
# globset, tar/flate2) land in the follow-up phases C2-C9 / D2-D10 when their
# call-sites are actually wired up — see docs/paper-export-plan.md §4 and
# docs/publishing-plan.md §4 for the full eventual dep set.
toml = "0.9"

# Slice D phase D3 — local Quartz build + preview.
#
# `tiny_http` is the lightest viable HTTP server in the Rust ecosystem
# (~600 LoC, no async runtime needed) — perfect for the one-shot
# loopback preview server that serves <vault>/.lattice/publish/quartz/
# public/ on 127.0.0.1:<random>.  We deliberately avoid axum/hyper to
# keep the dep graph and binary size in check (axum pulls tower +
# tower-http + ~80 transitive crates).
tiny_http = "0.12"

# Sniff Content-Type for the preview server's static-file responses.
mime_guess = "2"

# Glob matching for the publish exclude list (`**/*.private.md`,
# `drafts/**`, …).  `globset` compiles a GlobSet once per build that
# matches in O(files × patterns) with prefix optimisation — cheaper
# than re-parsing patterns per file.
globset = "0.4"

# Slice C phase C2 — markdown → LaTeX converter for paper_compile.
#
# `comrak` gives us a CommonMark + GFM AST (same engine GitHub uses),
# which we walk to emit LaTeX.  Disabling the default `syntect`
# feature keeps the dep weight reasonable; we don't need syntax
# highlighting on the LaTeX side (the engine handles `\verbatim`).
comrak = { version = "0.28", default-features = false }

# Slice C phase C2 — Overleaf-ready zip bundle for paper_emit_bundle.
#
# `zip` is the reference pure-Rust ZIP writer.  We deliberately disable
# default features (which pull in bzip2 → C compiler) and only enable
# `deflate` (RFC 1951, pure-Rust via `flate2`) — that's the only
# compression Overleaf accepts on upload anyway.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Slice C phase C3 — in-process Typst engine for paper_compile.
#
# `typst` is the language + compiler crate; `typst-pdf` renders the
# compiled `Document` to a PDF byte vector.  `typst-kit` provides
# `FontSearcher` for resolving system fonts without us having to
# re-implement font enumeration per OS.  Pinned to 0.13 — newer
# Typst releases change the `World` trait surface, so a deliberate
# upgrade is needed when bumping.
typst = "0.13"
typst-pdf = "0.13"
typst-kit = { version = "0.13", default-features = false, features = ["fonts"] }

# `pulldown-cmark` for the markdown → Typst converter.  Smaller,
# pull-style parser; we don't need comrak's full GFM AST for the
# subset we map to Typst.
pulldown-cmark = { version = "0.10", default-features = false }

# Slice C phase C3 — ergonomic error enums for the typst compile path
# (`TypstCompileError`) without hand-rolling Display/Error/From impls.
thiserror = "1"

# ----------------------------------------------------------------------------
# v2 §1 (Calendar) + v2 §2 (Journaling).
#
# Both modules need date math: today in the user's local time zone,
# YYYY-MM-DD parsing for journal filenames, week-range computation for
# the calendar grid, and ISO-8601 round-tripping for the unified
# `CalEvent`.  Pulling `chrono` once is far cheaper (and far less
# error-prone) than hand-rolling leap-year math on top of
# `std::time::SystemTime`.
#
# - `clock`  — enables `Local::now()` (transitively pulls `iana-time-zone`
#              for cross-platform local-zone lookup).
# - `serde`  — derives Serialize/Deserialize for `DateTime<Utc>` so the
#              `CalEvent` IPC type round-trips through `serde_json`.
# - default features (`std`, `wasmbind`-off, `oldtime`-off) are kept.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

[dev-dependencies]
# Scratch directories for sync/manifest tests.  Auto-cleaned on Drop.
tempfile = "3"

# Win32 DPAPI bindings for the Windows token-storage backend (sync/keychain.rs).
# Pure FFI; no extra build-time toolchain requirements (no C compiler / clang).
# Lives under a target-cfg dependency table so it's only resolved when
# building for Windows targets.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

# ----------------------------------------------------------------------------
# Build profiles — tuned for fast dev iteration on Windows.
#
#  - Our own app crate (`lattice` / `lattice_lib`) stays at opt-level=0 so
#    incremental rebuilds after a `src-tauri/src/*.rs` change are very fast.
#  - Every other crate (i.e. dependencies) is built with opt-level=1 so they
#    only get compiled once and the resulting binary still runs reasonably
#    fast in dev (the big wins are in serde/syn-driven crates and tauri).
#  - `debug = "line-tables-only"` keeps panic backtraces but cuts the
#    debug-info section the linker has to swallow on every relink — this is
#    the single biggest dev-build speedup on Windows.
#  - Release profile uses thin-LTO + a single codegen unit for smaller and
#    faster shipped binaries.
# ----------------------------------------------------------------------------

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
panic = "abort"

